--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   background-color: #000; /* Darkened background color */
   color: #fff; /* Dark mode text color */
   display: flex;
